<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnd2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/Вопросы"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"

        android:gravity="center"
        android:text="@string/Укажите_пол"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2">
    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/Мужчина"/>

    <RadioButton
        android:id="@+id/radioButton2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Женщина"/>
    </RadioGroup>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Изучали"/>
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_below="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ДА"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Выберите_уровень"/>

    <!-- Выравнивание ниже компонента "textView4" (android:layout_below="@+id/textView4") -->
    <Spinner
        android:layout_below="@+id/textView4"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/levels_arrays"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onNext"
        android:text="@string/Итоги"/>
</RelativeLayout>